# Cutexture

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  README
configurations/: ogre-plugins-unix.cfg  ogre-plugins-win32-debug.cfg  ogre-plugins-win32-release.cfg
demo/: CMakeLists.txt
demo/include/: Core.h  DemoConstants.h  Game.h  OgreCore.h  SleepThread.h  ViewManager.h
demo/src/: Core.cpp  Game.cpp  OgreCore.cpp  SceneManager.cpp  Settings.cpp  main.cpp
demo/ui/: game.ui
include/: Constants.h  Core.h  Enums.h  Exception.h  Game.h  InputManager.h  OgreCore.h  Prerequisites.h  SceneManager.h  Settings.h  TextureMath.h  UiManager.h
src/: Core.cpp  Exception.cpp  Game.cpp  InputManager.cpp  OgreCore.cpp  UiManager.cpp  ViewManager.cpp  main.cpp
